# indi

./: build  developer-build.bash
drivers/ccd/: CMakeLists.txt  imagemagick_converter.cpp  imagemagick_converter.h
libs/ImageMagick-7/MagickCore/: magick-baseconfig.h  version.h
